<resources>
    <string name="app_name">IdeaList</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="email">Email</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="Email">Email</string>
    <string name="logout">Logout</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_as_customer">Login As Customer</string>
    <string name="login_as_store_owner">Login As Store Owner</string>
    <string name="sign_up">Sign Up</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>